<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="activity"
            type="com.example.demo.activity.AddToDoActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AddToDoActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/new_todo_item"/>
            <EditText
                android:layout_marginTop="20dp"
                android:id="@+id/title"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittextborder"
                android:hint="@string/title" />

            <EditText
                android:id="@+id/desc"
                android:layout_margin="10dp"
                android:gravity="start"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/edittextborder"
                android:hint="@string/description"/>
            <LinearLayout
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cencel"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textAllCaps="false" />
                <Button
                    android:id="@+id/done"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    android:textAllCaps="false" />
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>
</layout>
