<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data>
    <import type="android.view.View"/>
    <variable
        name="activity"
        type="com.example.demo.activity.MainActivity" />
</data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:paddingStart="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo_list"/>
            <TextView
                android:layout_marginTop="6dp"
                android:layout_weight="5"
                android:id="@+id/add"
                android:background="#C3C2C3"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/add"
                android:layout_gravity="center_horizontal|center_vertical"
                android:paddingStart="15dp"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textAllCaps="false"/>
        </LinearLayout>
        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_for_todo_items"
            android:background="@drawable/edittextborder"
            android:layout_margin="10dp"
            android:padding="5dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_margin="10dp"
            android:background="@drawable/edittextborder"
            tools:listitem="@layout/item_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</layout>